kubernetes/apps/unifi/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
  name: redis
