kubernetes/apps/unifi/deployment.yaml
# Of note: https://github.com/linuxserver/docker-unifi-network-application/issues/29

apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-controller

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: unifi-controller
      app.kubernetes.io/name: unifi-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: unifi-controller
        app.kubernetes.io/name: unifi-controller
    spec:
      serviceAccountName: unifi-controller
      containers:
        - name: unifi-controller
          image: linuxserver/unifi-network-application:9.2.87@sha256:0b6febc131ad686188c52b586e2882f834283c977c94a9bc64093ebd48e576c3
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            protocol: TCP
            name: devicecom
          - containerPort: 8443
            protocol: TCP
            name: webapi
          - containerPort: 8880
            protocol: TCP
            name: httpredirects
          - containerPort: 8843
            protocol: TCP
            name: httpsredirects
          - containerPort: 6789
            protocol: TCP
            name: speedtest
          - containerPort: 10001
            protocol: UDP
            name: apdiscovery
          - containerPort: 3478
            protocol: TCP
            name: stun
          - containerPort: 1900
            protocol: UDP
            name: appdiscovery
          - containerPort: 5514
            protocol: UDP
            name: syslogcapture
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              memory: 2Gi
          volumeMounts:
            - mountPath: "/config"
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: unifi-controller-data
