kubernetes/apps/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: unifi-controller
    app.kubernetes.io/name: unifi-controller
  name: unifi-controller
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: unifi-controller
    app.kubernetes.io/name: unifi-controller
  ports:
  - name: devicecom
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: webapi
    port: 8443
    targetPort: 8443
    protocol: TCP
  - name: httpredirects
    port: 8880
    targetPort: 8880
    protocol: TCP
  - name: httpsredirects
    port: 8843
    targetPort: 8843
    protocol: TCP
  - name: speedtest
    port: 6789
    targetPort: 6789
    protocol: TCP
  - name: apdiscovery
    port: 10001
    targetPort: 10001
    protocol: UDP
  - name: stun
    port: 3478
    targetPort: 3478
    protocol: UDP
